Unit Testcases Readme and Refactor